# wpt-gen

./: .env.example  .gitignore  .pylintrc  GEMINI.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  wpt-gen.yml
.github/: dependabot.yml
.github/workflows/: main.yml  publish.yml
benchmarks/: README.md  manifest.yaml
benchmarks/golden/: README.md
docs/: cli.md  contributing.md  explicit-phase-resumption.md  releasing.md  workflow-phases.md
lib/: pyproject.toml
scripts/: check_license.py  check_pyproject.py
scripts/benchmark/: __init__.py  manifest.py  run_benchmark.py  scoring.py
tests/: .pylintrc  conftest.py  test_anthropic.py  test_api.py  test_caching.py  test_check_license.py  test_chromestatus.py  test_clear_cache.py  test_config.py  test_context.py  test_context_131.py  test_coverage_audit.py  test_engine.py  test_engine_chromestatus.py  test_engine_unified_flow.py  test_evaluation.py  test_execution.py  test_llm.py  test_llm_coverage.py  test_llm_timeout.py  test_main.py  test_metadata.py  test_metadata_coverage.py  test_mock.py  test_models.py  test_observability.py  test_phase_context_assembly.py  test_phase_coverage_audit.py  test_phase_evaluation.py  test_phase_generation.py  test_phase_requirements_extraction.py  test_phase_spec_requirements_extraction.py  test_phase_utils.py  test_phases.py  test_report_render.py  test_reqs.py  test_resume.py  test_sync.py  test_templates.py  test_ui.py  (+3 more)
tests/agents/: test_adk_conformance_evaluator.py  test_adk_evaluator.py  test_adk_test_generator.py  test_adk_tools.py  test_provider.py  test_streaming.py  test_tools.py
tests/benchmark/: test_run_benchmark.py
wptgen/: __init__.py  config.py  context.py  engine.py  lint_ext.py  llm.py  main.py  metadata.py  mock.py  models.py  observability.py  ui.py  utils.py
wptgen/agents/: __init__.py  adk_conformance_evaluator.py  adk_evaluator.py  adk_test_generator.py  provider.py  requirements.py  streaming.py  tools.py
wptgen/phases/: __init__.py  chromestatus_requirements_extraction.py  context_assembly.py  coverage_audit.py  evaluation.py  execution.py  generation.py  report_render.py  requirements_extraction.py  spec_requirements_extraction.py  utils.py
wptgen/templates/: adk_evaluator.jinja  adk_evaluator_system.jinja  adk_requirements_critic.jinja  adk_requirements_critic_system.jinja  adk_requirements_generator.jinja  adk_requirements_generator_system.jinja  correction.jinja  (+26 more)
(+34 files in other folders)
