[build-system]
requires = ["setuptools>=82.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wpt-gen"
version = "0.1.0"
description = "A CLI Tool for AI-Powered Web Platform Test Generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core LLM Integration
    "google-genai>=1.62.0",

    # Context & Scraping
    "trafilatura>=2.0.0",

    # Prompt Templating
    "jinja2>=3.1.6",

    # CLI Infrastructure
    "typer>=0.23.0",
    "rich>=14.3.2",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.0",
    "mypy>=1.19.1",
]

[project.scripts]
wpt-gen = "wptgen.main:app"

[tool.setuptools.packages.find]
include = ["wptgen*"]

[tool.setuptools.package-data]
wptgen = ["templates/*.jinja", "templates/*.xml", "templates/*.txt"]
